--- a/index.html
+++ b/index.html
@@ -3795,136 +3795,141 @@ d[e>>>5]|=128<<24-e%32;d[(e+64>>>9<<4)+14]=h.floor(b/4294967296);d[(e+64>>>9<<4)
     </div>
 </div>
 <div class="content" id="content">
-<div class="container">
-    <h5>
-        <span class="private">
-            <strong>PROTIP:</strong> If you see anything red on this page, that means it's a secret. Keep a copy and don't show anyone.</span>
-    </h5>
-  <div class="row  d-print-none">
-<div class="col-2">
+    <div class="container">
+        <h5>
+            <span class="private">
+                <strong>PROTIP:</strong> If you see anything red on this page, that means it's a secret. Keep a copy and don't show
+                anyone.
+            </span>
+        </h5>
+        <div class="row box d-print-none">
+            <div class="col-6 d-print-none">
+                <div class="info-box">
+                    <div class="logo">
+                        <img class="img-fluid" src="images/trtl.svg" alt="TurtleCoin">
+                        <span>v0.2.2</span>
+                    </div>
+                    <div class="step-1">
+                        <h3>Step 1</h3>
+                        <p>Select your language and click
+                            <strong>OK</strong>.</p>
+                        <center>
+                            <div class="btn-group" role="group" aria-label="Basic example">
+                                <button class="btn btn-default" onclick="js:genwallet('english');" type="button" value="English">English</button>
+                                <button class="btn btn-default" onclick="js:genwallet('spanish');" type="button" value="Spanish">Spanish</button>
+                                <button class="btn btn-default" onclick="js:genwallet('japanese');" type="button" value="Japanese">Japanese</button>
+                            </div>
+                        </center>
+                        <br>
+                        <center>
+                            <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">OK</button>
+                        </center>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6 d-print-none">
+                <div class="info-box">
+                    <h3>Step 2 (optional)</h3>
+                    <p>For extra security, type a few random letters, words, numbers or symbols into this blank to make your keys
+                        more complex, or leave it empty. Press "Regenerate" when you are done.</p>
+                    <input id="user_entropy_widget" type="text" style="width:100%;" value="" placeholder="  The more random stuff you type in this box, the better your keys will be."
+                    />
+                    <br />
+                    <br />
+                    <center>
+                        <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">Regenerate Address</button>
+                    </center>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="info-box">
+                    <h3 class="d-print-none">Step 3</h3>
+                    <p class="d-print-none">Write down your public address, or copy paste it somewhere. Anyone with this address can send you money.
+                        You can also send this address to someone as a QR code by clicking the QR link.</p>
+                    <h3 class="d-print-block">Public Address</h3>
+                    <div class="col border border-success" style="padding: 1em;">
+                        <center>
+                            <strong>
+                                <span style="font-family: monospace, monospace; word-wrap: break-word;" class="" id="address_widget">Reticulating Splines...</span>
 
-    <img class="img-fluid" src="images/trtl.svg" alt="TurtleCoin">
-    <center>
-    <small>v0.2.2</small>
-  </center>
-</div>
-   <div class="col-4 d-print-none">
-        <h3>Step 1</h3>
-        <p>Select your language and click <strong>OK</strong>.</p>
-<center>
-<div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-default" onclick="js:genwallet('english');" type="button" value="English">English</button>
-                <button class="btn btn-default" onclick="js:genwallet('spanish');" type="button" value="Spanish">Spanish</button>
-                <button class="btn btn-default" onclick="js:genwallet('japanese');" type="button" value="Japanese">Japanese</button>
-</div>
-</center>
-        <br>
-        <center>
-                <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">OK</button>
-        </center>
-</div>
-
-    <div class="col-6 d-print-none">
-      <h3>Step 2 (optional)</h3>
-      <p>For extra security, type a few random letters, words, numbers or symbols into this blank to make your keys more complex, or leave it empty. Press "Regenerate" when you are done. </p>
-      <input id="user_entropy_widget" type="text" style="width:100%;" value="" placeholder="  The more random stuff you type in this box, the better your keys will be." /><br /><br />
-      <center>
-      <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">Regenerate Address</button>
-    </center>
+                            </strong>
+                        </center>
+                    </div>
+                    <p class="d-print-block">This is your wallet address. Anybody with this address can send you money.</p>
+                    <span class="qrcode d-print-none"
+                        id="address_qr_widget" onclick="js:toggle_qr();"></span>
+                    <br />
+                    <center class="d-print-none">
+                        <button class="btn btn-default" href="#" onclick="js:toggle_qr();">Click to see QR Code</button>
+                    </center>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="info-box">
+                    <h3 class="d-print-none">Step 4</h3>
+                    <h3 class="d-print-block">Seed Phrase</h3>
+                    <p class="d-print-none">Copy your seed phrase and keys. It seems like a lot, but if you lose your wallet, these can be used to restore
+                        your money. That also means you need to keep them safe and private.</p>
+                    <p class="d-print-block">This is your seed phrase. You can use it to regenerate your wallet if you lose it.</p>
+                    <em>
+                        <div class="col border border-danger" style="font-family: monospace, monospace; padding: 1em;">
+                            <span class="private">
+                                <span id="mnemonic_widget">Reticulating Splines...</span>
+                            </span>
+                        </div>
+                    </em>
+                    <div class="row d-print-block">
+                        <div class="col-12">
+                            <h3 class="d-print-block">Wallet Keys</h3>
+                            <p>These are the keys you need to regenerate your wallet.</p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row border border-danger" style="padding:1em;">
+                            <div class="col-3">
+                                <strong>Spend Key:</strong>
+                                <span class="private">
+                                    <span style="font-family: monospace, monospace; word-wrap: break-word;" id="spend_key_widget">Generating...</span>
+                                </span>
+                            </div>
+                            <div class="col-3">
+                                <strong>View Key:</strong>
+                                <span class="private">
+                                    <span style="font-family: monospace, monospace; word-wrap: break-word;" id="view_key_widget">Generating...</span>
+                                </span>
+                            </div>
+                            <div class="col-6">
+                                <strong>GUI Wallet Key:</strong>
+                                <span class="private-sm">
+                                    <small style="font-family: monospace, monospace; word-wrap: break-word;" id="wallet_keys_widget">Generating...</small>
+                                </span>
+                            </div>
+                            <div class="col-12">
+                                <center>
+                                    <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">Generate New Wallet</button>
+                                    <input type="button" onClick="window.print()" class="btn btn-default" value="Print This Page" />
+                                </center>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+        <div class="footer">
+                <h2>TURTLECOIN</h2>
+                <div class="wrap">
+                    <hr>
+                    <div class="trtl-button green up">Up</div>
+                <p class="no-margin">© RockSteady, TurtleCoin Project</p></div>
+            </div>
+        </div>
     </div>
-
-  </div>
-
-  <div class="row">
-    <div class="col-12">
-      <h3 class="d-print-none">Step 3</h3>
-      <p class="d-print-none">Write down your public address, or copy paste it somewhere. Anyone with this address can send you money. You can also send this address to someone as a QR code by clicking the QR link.</p>
-      <h3 class="d-print-block">Public Address</h3>
-      <div class="col border border-success" style="padding: 1em;">
-      <center>
-        <strong>
-          <span  style="font-family: monospace, monospace; word-wrap: break-word;" class="" id="address_widget">Reticulating Splines...</span>
-
-        </strong>
-      </center>
-      </div>
-      <p class="d-print-block">This is your wallet address. Anybody with this address can send you money.</p>
-
-        <span class="qrcode d-print-none" id="address_qr_widget" onclick="js:toggle_qr();"></span>
-
-
-      <br />
-      <center class="d-print-none">
-        <button class="btn btn-default" href="#" onclick="js:toggle_qr();">Click to see QR Code</button>
-      </center>
-    </div>
-  </div>
-  <div class="row">
-  <div class="col-12">
-    <h3 class="d-print-none">Step 4</h3>
-    <h3 class="d-print-block">Seed Phrase</h3>
-    <p class="d-print-none">Copy your seed phrase and keys. It seems like a lot, but if you lose your wallet, these can be used to restore your money. That also means you need to keep them safe and private.</p>
-    <p class="d-print-block">This is your seed phrase. You can use it to regenerate your wallet if you lose it.</p>
-    <em>
-
-      <div class="col border border-danger" style="font-family: monospace, monospace; padding: 1em;">
-        <span class="private">
-          <span id="mnemonic_widget">Reticulating Splines...</span>
-        </span>
-      </div>
-
-
-
-
-    </em>
-  </div>
-  </div>
-  <br>
-  <div class="row d-print-block">
-    <div class="col-12">
-      <h3 class="d-print-block">Wallet Keys</h3>
-      <p>These are the keys you need to regenerate your wallet.</p>
-    </div>
-  </div>
-  <div class="col">
-<div class="row border border-danger" style="padding:1em;">
-  <div class="col-3">
-    <strong>Spend Key:</strong>
-    <span class="private">
-      <span style="font-family: monospace, monospace; word-wrap: break-word;" id="spend_key_widget">Generating...</span>
-    </span>
-  </div>
-  <div class="col-3">
-    <strong>View Key:</strong>
-    <span class="private">
-      <span style="font-family: monospace, monospace; word-wrap: break-word;" id="view_key_widget">Generating...</span>
-    </span>
-  </div>
-  <div class="col-6">
-    <strong>GUI Wallet Key:</strong>
-    <span class="private-sm">
-      <small style="font-family: monospace, monospace; word-wrap: break-word;" id="wallet_keys_widget">Generating...</small>
-    </span>
-  </div>
 </div>
-
-
-
-</div>
-<div class="row d-print-none">
-    <div class="col-12">
-      <center>
-      <button class="btn btn-default" onclick="js:genwallet(null);" type="button" value="Generate wallet">Generate New Wallet</button>
-      <input type="button" onClick="window.print()" class="btn btn-default" value="Print This Page"/>
-    </center>
-    </div>
-</div>
-
-
-</div>
-</div>
-</div>
-
 
 <script>
 function poor_mans_kdf(str)
